tests/Front/SemanticError/08_MissingVarDeclarationInElse.c
void main() {
    int32_t b;
    b = 2;
    if ( b < 3){
        b = 1;
    }else{
        a = 5;
    }
}